<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/register_account_input_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/register_account__input_hint"
        style="@style/edit_text_style"
        />

    <EditText
        android:id="@+id/register_password_input_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_account_input_view"
        android:hint="@string/register_password_inout_hint"
        style="@style/edit_text_style"
        android:layout_marginTop="@dimen/vertical_margin_normal"
        />
    <EditText
        android:id="@+id/register_verify_code_input_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register_send_code_button"
        app:layout_constraintTop_toBottomOf="@id/register_password_input_view"
        style="@style/edit_text_style"
        android:layout_marginTop="@dimen/vertical_margin_normal"
        />
    <Button
        android:id="@+id/register_send_code_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/register_verify_code_input_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_input_view"
        android:text="@string/register_send_verify_code_val"
        android:textSize="@dimen/normal_size"
        android:layout_marginHorizontal="@dimen/text_horizontal_margin_size"
        android:layout_marginTop="@dimen/vertical_margin_normal"
        />
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_verify_code_input_view"
        android:text="@string/register_button_val"
        android:textSize="@dimen/smaller_title_size"
        android:layout_marginHorizontal="@dimen/text_horizontal_margin_size"
        android:layout_marginTop="@dimen/vertical_margin_normal"
        />





</androidx.constraintlayout.widget.ConstraintLayout>